/*
 * This build file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * user guide available at https://docs.gradle.org/4.4.1/userguide/java_library_plugin.html
 */

// Apply the java-library plugin to add support for Java Library
apply plugin: 'java-library'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// In this section you declare where to find the dependencies of your project
repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
}

dependencies {
    api 'com.github.vandeseer:easytable:0.6.0'
    api 'org.apache.poi:poi-ooxml:4.0.1'
    api 'org.apache.poi:poi:4.0.1'
    api 'org.apache.logging.log4j:log4j-core:2.13.3'
    api 'org.apache.logging.log4j:log4j-api:2.13.3'
    api 'com.fasterxml.jackson.core:jackson-core:2.11.2'
    api 'com.fasterxml.jackson.core:jackson-databind:2.11.2'
    api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.2'

    implementation 'com.github.jiconfont:jiconfont-swing:1.0.1'
    implementation 'com.github.jiconfont:jiconfont-elusive:2.0.3'
    implementation 'org.jsoup:jsoup:1.12.1'
    implementation 'com.google.inject:guice:7.0.0'

    // Use JUnit test framework
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
}


test {
    useJUnitPlatform()
}
